--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "ucan"}]
 python = ">=3.10,<=3.14"
 pre-commit = "4.2.0"
 pydantic = "^2.11.7"
+pyserial = "^3.5"
 
 [build-system]
 requires = ["poetry-core"]
